@@ -1,3 +1,8 @@
+Upcoming:
+- Now also avoid pillager outposts with the avoidStructures option
+- New server config options 'avoidStructuresAdjacent' and 'avoidVillagesAdjacent' to avoid generating Lost Cities in chunks that have structures or villages adjacent to them. Default on
+- New server config option 'avoidFlattening' to avoid flattening the terrain where structures were avoided. Default on
+
 1.20-7.3.1:
 - Better api to get multibuilding information
 
